@@ -1952,10 +1952,7 @@ Global `ispell-quit' set to start location to continue spell session."
 		    ;; event), stop ispell.  As a special exception,
 		    ;; ignore mouse events occuring in the same frame.
 		    (while (and input-valid (not (characterp char)))
-		      (setq char (read-event))
-		      ;; Convert kp-0 to ?0, etc.
-		      (when (symbolp char)
-			(setq char (get char 'ascii-character)))
+		      (setq char (read-key))
 		      (setq input-valid
 			    (or (characterp char)
 				(and (mouse-event-p char)
