@@ -1,3 +1,8 @@
+2009-09-13  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* textmodes/ispell.el (ispell-command-loop): Improve last fix, using
+	the new read-key function.
+
 2009-09-13  Chong Yidong  <cyd@stupidchicken.com>
 
 	* term/x-win.el (x-menu-bar-open): Only call accelerate-menu if it
